# WebSegment

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .swcrc  LICENSE  LISENCE  README.md  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  turbo.json
$segment/: corePlugins.ts  corePluinList.js
scripts/: generate-plugin-list.ts  generate-types.ts  pre-publish-optimizations.mjs  (+1 more)
sigma/crates/core/: Cargo.toml
sigma/crates/core/benches/: parse_candidates.rs  scan_files.rs
sigma/crates/core/fuzz/: Cargo.toml
sigma/crates/core/fuzz/fuzz_targets/: parsing.rs
sigma/crates/core/src/: glob.rs  lib.rs  parser.rs
sigma/crates/core/tests/: auto_content.rs
sigma/crates/node/: Cargo.toml  index.js  package.json  websegment-sigma.darwin-x64.node
sigma/crates/node/npm/android-arm-eabi/: README.md  package.json
sigma/crates/node/npm/android-arm64/: README.md  package.json
sigma/crates/node/npm/darwin-arm64/: README.md  package.json
sigma/crates/node/npm/darwin-x64/: README.md  package.json
sigma/crates/node/npm/freebsd-x64/: README.md  package.json
sigma/crates/node/npm/linux-arm-gnueabihf/: README.md  package.json
sigma/crates/node/npm/linux-arm64-gnu/: README.md  package.json
sigma/crates/node/npm/linux-arm64-musl/: README.md  package.json
sigma/crates/node/npm/linux-x64-gnu/: README.md  package.json
sigma/crates/node/npm/linux-x64-musl/: README.md  package.json
sigma/crates/node/npm/win32-x64-msvc/: README.md  package.json
sigma/crates/node/src/: lib.rs
(+47 files in other folders)
