[package]
name = "websegment-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.9.1"
globwalk = "0.9.1"
log = "0.4.21"
rayon = "1.9.0"
fxhash = "0.2.1"
crossbeam = "0.8.4"
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
ignore = "0.4.22"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ['html_reports'] }
tempfile = "3.10.1"

[[bench]]
name = "parse_candidates"
harness = false

[[bench]]
name = "scan_files"
harness = false
