[package]
name = "websegment-sigma"
edition = "2021"
version = "0.0.0"

[lib]
crate-type = ['cdylib']

[dependencies]
# Default enable napi9 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2.16.0", default-features = false, features = ["napi9"]}
napi-derive = "2.16.0"
rayon = "1.9.0"
websegment-core = { path = "../core" }

[build-dependencies]
napi-build = "2.1.2"

